gcc/testsuite/rust/rustc/ui/parser/issues/misplaced-return-type-issue-126311.rs
fn foo<T>() where T: Default -> u8 {}
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }

fn main() {}

